# rf-companion

./: RfCompanion.fzz
app/: .gitignore  settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/me/devcexx/rfapp/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/me/devcexx/rfapp/: MainActivity.kt  RFCompanionApplication.kt
app/app/src/main/java/me/devcexx/rfapp/activity/: BluetoothOptionsActivity.kt  MainActivity.kt
app/app/src/main/res/drawable/: flash_circle.xml  ic_launcher_background.xml  swap_horizontal.xml
app/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/app/src/main/res/menu/: main_activity_menu.xml
app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/values-es/: strings.xml
app/app/src/test/java/me/devcexx/rfapp/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
firmware/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app.c  bleapp.c  clemsacode.c  clemsacode.h  fixedcode.c  fixedcode.h  idf_component.yml  private.h  stored_codes.c  stored_codes.h  teslacharger.c  teslacharger.h
firmware/main/bluetooth/: bt_spp_bluedroid.c  bt_spp_bluedroid.h
firmware/main/bt/: gatt_svr.c  rfble.c  rfble.h  rfble_gatt.c  rfble_gatt.h
firmware/main/rf/: clemsacode.c  clemsacode.h  fixedcode.c  fixedcode.h  rf.c  rf.h  rf_priv.h
firmware/main/rfapp/: common.c  pair_mode.c  rfapp.c  rfapp.h
(+17 files in other folders)
