idf_component_register(SRCS "private.c"
			    "bleapp.c"
			    "rfapp/common.c"
			    "rfapp/pair_mode.c"
			    "rfapp/rfapp.c"
			    "bt/rfble.c"
			    "bt/rfble_gatt.c"
			    "rf/fixedcode.c"
			    "rf/clemsacode.c"
			    "rf/rf.c"
			    "stored_codes.c"
                    INCLUDE_DIRS "")
